// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`float: anonymous float with negative literal > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": -2.5,
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
]
`;

exports[`float: anonymous float with negative literal > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    f32.load
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`float: anonymous float with negative literal > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": -2.5,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`float: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "PI",
      },
      {
        "isInteger": false,
        "type": "literal",
        "value": 3.14159,
      },
    ],
    "instruction": "const",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": 3.14159,
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__2",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
]
`;

exports[`float: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    f32.load
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`float: with constant identifier (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__2": {
    "byteAddress": 0,
    "default": 3.14159,
    "elementWordSize": 4,
    "id": "__anonymous__2",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`float: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": 3.14,
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 1,
    "lineNumberBeforeMacroExpansion": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "__anonymous__1",
      },
    ],
    "instruction": "push",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
]
`;

exports[`float: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    i32.const 4
    i32.const 0
    f32.load
    f32.store)
  (export "test" (func 0)))
"
`;

exports[`float: with literal (anonymous allocation) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__anonymous__1": {
    "byteAddress": 0,
    "default": 3.14,
    "elementWordSize": 4,
    "id": "__anonymous__1",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
